--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,7 +114,6 @@
 
 #root {
   width: 100%;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -143,4 +142,7 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+html, body {
+  overflow-y: auto !important;
 }
